tests/baselines/reference/jsdocFunction_missingReturn.errors.txt
/a.js(1,24): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value. 'undefined' is also allowed with --strictNullChecks.


==== /a.js (1 errors) ====
    /** @type {function(): number} */
                           ~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value. 'undefined' is also allowed with --strictNullChecks.
    function f() {}
    